--- a/designs/pages/home/home.bkd.DH.html
+++ b/designs/pages/home/home.bkd.DH.html
@@ -1,27 +1,7 @@
 <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="a42ae01e-fa94-8dc1-c170-8943b01db2a0" style="">
 
-  <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="97383246-2514-ea41-df4c-a1e4233c6e6c">
-    <div class="ad-toolbar-border ad-toolbars drop row ui-sortable ui-sortable-handle" b-editor-key="6842eca7-ff14-af42-ee60-a4a5a62a4f8e">
-      <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="ace0fe2a-70cb-031c-a1df-2c111e05fffa">
-        <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="ca9e5bd3-ddff-8f04-b551-b5722f1d9184">
-          <div class="ad-buttons ui-sortable-handle" b-editor-key="e7eea1ac-d437-668b-daf3-57317ea4c17c"></div>
-          <div class="ad-buttons ui-sortable-handle" b-editor-key="28e3b6e9-05b4-ed29-1658-722b60fb0dee"></div>
-        </div>
-      </div>
-      <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="7c8ee6f3-48cc-2cc1-9f47-7c35a6e65d3a" style="">
-        <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="b5c08e64-2e5a-90bb-2329-44a0a7530154">
-          <div class="ad-image-component ad-charts-border ad-charts-align bkeeper-container-label ui-sortable-handle" b-editor-key="538f810e-6100-b4aa-a3cd-c23a30aac9f4" style=""></div>
-          <div class="ad-buttons ui-sortable-handle" b-editor-key="796d5489-f966-e0a4-a3f9-82c2c90327f4"></div>
-          <div class="ad-image-component ad-charts-border ad-charts-align bkeeper-container-label ui-sortable-handle" b-editor-key="e8f18fd7-d191-b6e5-5a47-a0d49aaf05d3"></div>
-          <div class="ad-buttons ui-sortable-handle" b-editor-key="a2b82ac5-f8e5-7c09-b476-bbd72635d032" style=""></div>
-          <div class="ad-image-component ad-charts-border ad-charts-align bkeeper-container-label ui-sortable-handle" b-editor-key="05c0281a-4741-d687-03f7-62af0b2cdf7b"></div>
-          <div class="ad-image-component ad-charts-border ad-charts-align bkeeper-container-label ui-sortable-handle" b-editor-key="e974603a-7146-e7a0-906b-80b8cc80294b" style=""></div>
-          <div class="ad-image-component ad-charts-border ad-charts-align bkeeper-container-label ui-sortable-handle" b-editor-key="84a5394d-9d2c-d714-1622-139d5f9c3b1f"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="92846ecc-ce58-957f-cfd6-9551c9155cd0">
+
+  <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="92846ecc-ce58-957f-cfd6-9551c9155cd0" style="">
     <div class="ad-toolbar-border ad-toolbars drop row ui-sortable ui-sortable-handle" b-editor-key="870b14f7-5936-9acb-b387-ef07adebb2b4" style="">
 
       <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="38d4e7fd-d3c1-e312-12b0-89b6cb5c1a68" style="">
@@ -30,166 +10,94 @@
           <div class="ad-header-elements ad-h3 ui-sortable-handle" b-editor-key="d19febf9-9678-683a-5d7c-74850904e5c9">p</div>
         </div>
       </div>
-      <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="229926ac-a443-03f8-babe-0e2d77fad96e" style="">
-        <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="f67d5d82-ce95-d049-e76a-4d6796cad013" style="">
-          <div class="ad-buttons ui-sortable-handle" b-editor-key="43e5bccd-3878-17de-9060-0dbba366afc7"></div>
-          <div class="ad-buttons ui-sortable-handle" b-editor-key="93d70f15-989c-9bb0-9536-c9b3518b6f14" style=""></div>
-          <div class="ad-buttons ui-sortable-handle" b-editor-key="b21943ac-208c-7562-9544-8f35a5ee664f"></div>
-          <div class="ad-buttons ui-sortable-handle" b-editor-key="03661509-0041-c95d-7dba-e82634184f81"></div>
-          <div class="ad-buttons ui-sortable-handle" b-editor-key="74a234d2-14c3-4dd4-6e33-a30792305ab3"></div>
-          <div class="ad-buttons ui-sortable-handle" b-editor-key="1d192f7f-f83c-a8e7-7d93-8436b9cdd10c"></div>
-          <div class="ad-buttons ui-sortable-handle" b-editor-key="68f00f0a-aca8-ec01-ddfa-d180be90a094"></div>
 
-
-
-
-
-
+    </div>
+  </div>
+  <div class="ad-sidenav-container ad-charts-border drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="fbb7f237-0c67-2708-9da9-2020bccff78b">
+    <i style="font-size: 20px;position:absolute !important;top:0%;left:100px;" class="material-icons validate icons-events ui-sortable-handle">content_paste</i>
+    <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="97383246-2514-ea41-df4c-a1e4233c6e6c" style="">
+      <div class="ad-toolbar-border ad-toolbars drop row ui-sortable ui-sortable-handle" b-editor-key="6842eca7-ff14-af42-ee60-a4a5a62a4f8e" style="">
+        <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="1eb16bd6-65bb-1ea2-8e5e-4c9f4490f498" style="">
+          <div class="ad-icon ui-sortable-handle" b-editor-key="228f76e6-ebf2-dd15-411f-1bc9a2670a89">
+            <i class="material-icons" style="transform:rotate(180deg)">priority_high</i>
+          </div>
+        </div>
+        <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="ace0fe2a-70cb-031c-a1df-2c111e05fffa">
+          <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="ca9e5bd3-ddff-8f04-b551-b5722f1d9184">
+            <div class="ad-buttons ui-sortable-handle" b-editor-key="e7eea1ac-d437-668b-daf3-57317ea4c17c"></div>
+            <div class="ad-buttons ui-sortable-handle" b-editor-key="28e3b6e9-05b4-ed29-1658-722b60fb0dee"></div>
+          </div>
+        </div>
+        <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="7c8ee6f3-48cc-2cc1-9f47-7c35a6e65d3a" style="">
+          <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="b5c08e64-2e5a-90bb-2329-44a0a7530154">
+            <div class="ad-icon ui-sortable-handle" b-editor-key="768de013-95c6-8520-ab8f-1223447fbd45">
+              <i class="material-icons" style="transform:rotate(180deg)">priority_high</i>
+            </div>
+            <div class="ad-buttons ui-sortable-handle" b-editor-key="796d5489-f966-e0a4-a3f9-82c2c90327f4"></div>
+            <div class="ad-icon ui-sortable-handle" b-editor-key="eb214a8a-ff4d-a94d-8c38-f39120f9d6fc">
+              <i class="material-icons" style="transform:rotate(180deg)">priority_high</i>
+            </div>
+            <div class="ad-buttons ui-sortable-handle" b-editor-key="a2b82ac5-f8e5-7c09-b476-bbd72635d032" style=""></div>
+            <div class="ad-image-component ad-charts-border ad-charts-align bkeeper-container-label ui-sortable-handle" b-editor-key="05c0281a-4741-d687-03f7-62af0b2cdf7b"></div>
+            <div class="ad-image-component ad-charts-border ad-charts-align bkeeper-container-label ui-sortable-handle" b-editor-key="e974603a-7146-e7a0-906b-80b8cc80294b" style=""></div>
+            <div class="ad-image-component ad-charts-border ad-charts-align bkeeper-container-label ui-sortable-handle" b-editor-key="84a5394d-9d2c-d714-1622-139d5f9c3b1f"></div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="77ec0363-6755-507c-7bab-bde43fef3d82" style="">
     <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="c6547b7f-ae4b-f3a0-92d7-e3598f76d2b7" style="">
 
       <div class="ad-raised-button ui-sortable-handle" b-editor-key="5c5ba4eb-4d72-d514-458c-f4e4af4bc30e" style="">
 
 
       </div>
-      <div class="ad-textfield ad-height ui-sortable-handle" b-editor-key="6a63bfce-3406-e79f-f71b-fcb204746414">text</div>
-    </div>
-  </div>
-  <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="27c3cfe1-2301-4933-2adf-acee711486e4" style="">
+      <div class="ad-textfield ad-height ui-sortable-handle ui-select-panel" b-editor-key="6a63bfce-3406-e79f-f71b-fcb204746414">text
 
-  </div>
-
-
-  <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="e3612636-0718-b981-33b8-ca924a194684" style="">
-    <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="0f0f3cee-7845-a092-2fca-c1a392408080" style="">
-      <div class="ad-header-elements ad-h3 ui-sortable-handle" b-editor-key="9de230bb-89e3-090e-7d87-9ef8de8df918">p</div>
-    </div>
-    <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="fd3e24e5-a724-3e89-69f3-9e7e0734028e" style="">
-      <i style="font-size: 37px;line-height: 2;padding: 1px;" class="material-icons">code</i>
-
-
-
-    </div>
-  </div>
-  <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="6fb8e880-7f9a-8c62-d71d-43304dea845f" style="">
-    <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="7e32fa7b-e777-3e91-c27c-9825deb67085" style="">
-      <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="9ec6b2d0-1b28-53d1-bbb4-7d3baa9cc114" style="">
-        <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="0c9d77ed-28ba-6c49-c6a5-4312f2dcb650">
-          <div class="ad-header-elements ad-h4 ui-sortable-handle" b-editor-key="78f3db8c-e7ee-acd1-2108-16bd0d3ef8e3" style="">h4</div>
-        </div>
+        <img class="delete ui-draggable ui-draggable-handle" src="assets/remove.svg" style="position: relative; cursor: pointer;">
       </div>
     </div>
-  </div>
-  <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="7c6ff044-db34-dea8-2bc0-81644e884003" style="">
-    <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="375f6f13-3ed0-d6b6-be04-10b84ef3fbd7" style="">
-      <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="5e03412e-c8af-b20d-eb6b-fbca01e3f95f" style="">
-        <i style="font-size: 37px;line-height: 2;padding: 1px;" class="material-icons">code</i>
-      </div>
-    </div>
+    <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="e3612636-0718-b981-33b8-ca924a194684" style="">
 
-
-  </div>
-  <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="529be50c-4fdc-e778-cede-afe3ba4d8e52" style="">
-    <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="b96308c4-b83e-2077-90f1-80a617d7854f">
-
-
-      <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="9ac20607-1a57-805f-6400-8bb6e096bf2e" style="">
-        <i style="font-size: 37px;line-height: 2;padding: 1px;" class="material-icons">code</i>
-      </div>
-      <div class="ad-fab-button ad-fab ui-sortable-handle" b-editor-key="441ca5e9-cd4e-4c57-55af-c0af59d52958">
-
-      </div>
-    </div>
-    <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="befadbba-6965-178b-6879-185c7e924c62" style="">
-      <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="135853d6-3270-1dbd-b87d-4cb4ab5bebc7" style="">
-        <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="662b8863-8853-f056-7849-8350d34fa061" style="">
-          <div class="ad-header-elements ad-h4 ui-sortable-handle" b-editor-key="6593dd69-6650-7d1c-3012-999c49d87e90">h4
-
-          </div>
-        </div>
-      </div>
-      <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="3d3795cc-72a4-75d2-6288-1f5015ed5294" style="">
-        <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="5d818585-4494-46b7-f4cc-cda7f892f585" style="">
-          <i style="font-size: 37px;line-height: 2;padding: 1px;" class="material-icons">code</i>
-        </div>
-      </div>
-      <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="43c7f716-7b1f-4dad-2ba3-08cc6c4a1fb9">
-        <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="7249a373-4975-6e3f-730a-2cc382ba4334" style="">
-          <i style="font-size: 37px;line-height: 2;padding: 1px;" class="material-icons">code</i>
-        </div>
-      </div>
-
-    </div>
-    <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="fca65ac8-bae6-9214-dfa1-3e819e6c9041">
-
-      <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="b8b84080-5ed6-e47e-654e-6bba4fe144fd" style="">
-        <i style="font-size: 37px;line-height: 2;padding: 1px;" class="material-icons">code</i>
-      </div>
-    </div>
-
-  </div>
-
-
-  <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="5a8f8553-0391-61d1-2076-d8896ad3d9c4" style="">
-
-
-
-
-
-
-
-    <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="aed3dccf-4815-96f7-e092-f260e0e82d76" style="">
-      <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="ff33e194-3162-2084-5648-f75c7d1360fc">
-        <i style="font-size: 37px;line-height: 2;padding: 1px;" class="material-icons">code</i>
-      </div>
-    </div>
-
-    <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="30493e4a-5817-1e8e-d990-13b69c44baf9" style="">
-
-      <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="bc8bda63-4c53-b97c-039a-a0ea6a209423" style="">
-        <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="328cc698-edba-fec2-d3ef-bb26bcc5b0bb" style="">
-          <div class="ad-header-elements ad-h4 ui-sortable-handle" b-editor-key="781c5b86-69ff-561e-2023-4e57f6cc9966" style="">h4</div>
-        </div>
-      </div>
-      <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="893f5c51-6515-1a35-01f0-279180b5a67c" style="">
-
-        <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="1e2ec800-0b1c-9f5a-080c-5565e31dbf6c" style="">
-          <i style="font-size: 37px;line-height: 2;padding: 1px;" class="material-icons">code</i>
-        </div>
-      </div>
-      <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="f54811e6-b196-615c-c76f-6a9e943db6b2" style="">
-        <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="70f00e5c-e32c-97ce-ca6b-5185978c80cf" style="">
-          <i style="font-size: 37px;line-height: 2;padding: 1px;" class="material-icons">code</i>
-        </div>
-      </div>
-
-
-
-
-    </div>
-    <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="18e96aef-ade3-601f-d332-c61f346b108b" style="">
-      <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="4be3cd36-9516-d30b-62c4-afd38478dc09">
+      <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="fd3e24e5-a724-3e89-69f3-9e7e0734028e" style="">
         <i style="font-size: 37px;line-height: 2;padding: 1px;" class="material-icons">code</i>
 
+
+
       </div>
     </div>
+    <div class="ad-footer ad-charts-border drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="f53191bd-310a-0652-42c0-3315ee235b14" style="">
+
+      <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="425bee94-f125-73b9-bf8f-e48f1095db7a" style="">
+        <div class="ad-header-elements ad-h3 ui-sortable-handle" b-editor-key="afc6f68e-e7f4-1002-7fa4-8ad5d1526c99" style="">p
+
+        </div>
 
 
-  </div>
-  <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="975ae2f7-690a-a785-b637-b5648e8f521f"></div>
-  <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle ui-select-panel" b-editor-key="e1091bb8-4ebc-5b1b-995d-ae17b291284a">
-
-    <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="5eadbfbc-73c4-474c-afdd-d84f8a8fdf35" style="">
-      <div class="ad-footer ad-charts-border drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="f53191bd-310a-0652-42c0-3315ee235b14" style="">
-        <div class="ad-header-elements ad-h3 ui-sortable-handle" b-editor-key="afc6f68e-e7f4-1002-7fa4-8ad5d1526c99" style="">p</div>
       </div>
-
-
     </div>
-    <img class="delete ui-draggable ui-draggable-handle" src="assets/remove.svg" style="position: absolute; cursor: pointer;">
+    <div class="ad-side-nav1 ad-charts-border drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="5a2d9f0a-e83c-dff1-e004-90c82fb5efef">
+      <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="d39c9cf5-0853-aaef-b081-ea2b5d702428">
+        <div class="ad-list-border drop ad-list ui-sortable ui-sortable-handle" b-editor-key="dc8a6329-6c4e-db46-80d6-e09ea4788ac8">
+          <div class="ad-list-border drop ad-list ad-list-item ui-sortable ui-sortable-handle" b-editor-key="a0e3e941-571d-a23b-d263-780d1c18b0de"></div>
+          <div class="ad-list-border drop ad-list ad-list-item ui-sortable ui-sortable-handle" b-editor-key="39c0a6ec-dcc2-bb5a-6156-91266a924480" style=""></div>
+          <div class="ad-list-border drop ad-list ad-list-item ui-sortable ui-sortable-handle" b-editor-key="54f75fff-b85e-3215-6ad1-3fa9c6fff5d7" style=""></div>
+        </div>
+      </div>
+      <div class="icon-events ad-side-nav1-image ui-sortable-handle"></div>
+    </div>
   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
