--- a/designs/pages/carousel/carousel.bkd.DH.html
+++ b/designs/pages/carousel/carousel.bkd.DH.html
@@ -4,7 +4,9 @@
 
       <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="0da0a2e0-b8a1-4cf6-0ee1-87ce4311e2ed" style="">
         <div class="column drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="d63c1c0a-5237-edac-7954-b463c6500138">
-          <div class="ad-header-elements ad-h4 ui-sortable-handle" b-editor-key="33d93b2a-d548-776d-5988-9ba10f3f8359" style="">h4</div>
+          <div class="ad-header-elements ad-h4 ui-sortable-handle ui-select-panel" b-editor-key="33d93b2a-d548-776d-5988-9ba10f3f8359" style="">h4
+            <img class="delete ui-draggable ui-draggable-handle" src="assets/remove.svg" style="position: relative; cursor: pointer;">
+          </div>
         </div>
 
 
