--- a/designs/pages/home/home.bkd.DH.html
+++ b/designs/pages/home/home.bkd.DH.html
@@ -51,18 +51,19 @@
 
 
       </div>
-      <div class="ad-textfield ad-height ui-sortable-handle ui-select-panel" b-editor-key="6a63bfce-3406-e79f-f71b-fcb204746414">text
+      <div class="ad-textfield ad-height ui-sortable-handle" b-editor-key="6a63bfce-3406-e79f-f71b-fcb204746414">text
 
-        <img class="delete ui-draggable ui-draggable-handle" src="assets/remove.svg" style="position: relative; cursor: pointer;">
+
       </div>
     </div>
     <div class="row drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="e3612636-0718-b981-33b8-ca924a194684" style="">
 
-      <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle" b-props="html-editor" b-editor-key="fd3e24e5-a724-3e89-69f3-9e7e0734028e" style="">
+      <div class="ad-lists bkeeper-container-label bkeeper-general-css ui-sortable-handle ui-select-panel" b-props="html-editor" b-editor-key="fd3e24e5-a724-3e89-69f3-9e7e0734028e" style="">
         <i style="font-size: 37px;line-height: 2;padding: 1px;" class="material-icons">code</i>
 
 
 
+        <img class="delete ui-draggable ui-draggable-handle" src="assets/remove.svg" style="position: relative; cursor: pointer;">
       </div>
     </div>
     <div class="ad-footer ad-charts-border drop bkeeper-container-label ui-sortable ui-sortable-handle" b-editor-key="f53191bd-310a-0652-42c0-3315ee235b14" style="">
